fb login using jquery

--- a/fullcontact/json_getfb_data.html
+++ b/fullcontact/json_getfb_data.html
@@ -45,7 +45,8 @@
             msg = "Success"; 
             document.getElementById("result").innerHTML = msg;
 
-              console.log(data);
+
+            // photo use array because there is many photo 
             // for(x in data.photos){
             //   photo = data.photos[x];              
             //   // $("div#resultdata").append(photo.type + " ");
