--- a/fullcontact/json_getfb_data.html
+++ b/fullcontact/json_getfb_data.html
@@ -53,6 +53,7 @@
             //   $("div#resultdata").append(photo.type + " ");
             // };
 
+            // getting the result on the ajax url json
             $("div#resultdata").append(data.contactInfo.fullName);
             // $("div#resultdata").append(data.socialProfiles.username);
 
