--- a/TCC/auth.html
+++ b/TCC/auth.html
@@ -11,7 +11,7 @@
     //event handler for submit button
       $.ajax({
           type: "POST",
-          url: "http://192.168.1.58//JSON_beginner/TCC/authentication.php",
+          url: "http://localhost/JSON_beginner/TCC/authentication.php",
           contentType: "application/json; charset=utf-8",
           dataType: "json",
           success: function(res) {
