new update for june 26 2014

--- a/contacts/all_contacts_in_ajaxformat.html
+++ b/contacts/all_contacts_in_ajaxformat.html
@@ -267,7 +267,7 @@
   <input type="text" name="phone_number" id="phone_number" class="text" placeholder="Phone Number"/>
   <input type="hidden" name="edit_contact_id" id="edit_contact_id" class="text"/>
   <br />
-  <input type="submit" name="insertData" id="insertData" value="Insert Contact" />
+  <input type="submit" name="insertData" id="insertData" value="Insert Contact" onClick="document.location.reload(true)"/>
   <input type="submit" name="updateData" id="updateData" value="Update Contact" />
 </div>
 <hr>
