--- a/TCC/trade.html
+++ b/TCC/trade.html
@@ -21,16 +21,16 @@
 
 <!-- form for fetching value's -->
 <br>
-<div style="border: 1px solid #000; padding: 10px; width: 500px;">
+<pre style="border: 1px solid #000; padding: 10px; width: 500px;">
 <span style="color: blue;">GUIDELINES:</span> "Use this value's for the moment"<br>
-'dynamic Token_key' => '<span id="tokenID"></span>'<br>
-'buy_currency'=>'EUR',<br>
-'sell_currency'=>'GBP',<br>
-'amount'=>'10000',<br>
-'side'=>'1',<br>
-'term_agreement'=>'true',<br>
-'reason'=>'Invoice Settlement'<br>
-</div>
+'dynamic Token_key' => '<span id="tokenID"></span>'
+'buy_currency'=>'EUR',
+'sell_currency'=>'GBP',
+'amount'=>'10000',
+'side'=>'1',
+'term_agreement'=>'true',
+'reason'=>'Invoice Settlement'
+</pre>
 <br>
 
 Response Message:<br>
@@ -109,6 +109,17 @@ Result Below: <br>
 
   <input type="text" name="trade_id_settle" id="trade_id_settle" placeholder='Trade ID'/><br>
   <input type="submit" name="settlement_add_trade" id="settlement_add_trade" value="Settlement Add Trade"/><br>
+
+  <hr/>
+
+  <!-- payment type -->
+  Respond Payment type: <div id="paymentType"></div><br>
+  <input type="text" name="ccy" id="ccy" placeholder='CCY'/><br>
+  <input type="text" name="destination_country_code" id="destination_country_code" placeholder='Desti Country Code'/><br>
+  <input type="text" name="pay_type" id="pay_type" placeholder='Payment Type'/><br>
+
+  <input type="submit" name="payment_type" id="payment_type" value="Payment Type"/><br><br>
+  <!-- payment type end -->
 
 </div>
 <div class="divider">
