--- a/TCC/trade.html
+++ b/TCC/trade.html
@@ -71,14 +71,15 @@ Result Below: <br>
   <input type="hidden" name="token" id="token" value="" />
   <br />
   <input type="submit" name="trade_submit" id="trade_submit" value="trade"/>
-  <input type="submit" name="deposit_account" id="deposit_account" value="Deposit Price"/>
 
   <br>
-  <!-- for the trade confirm resend -->
+  
+  <!-- for the trade confirm resend and deposit-->
   <span>Confirm Resend</span><br>
   <div id="resend"></div>
   <input type="text" name="trade_id" id="trade_id" placeholder='Trade ID'/>
   <input type="submit" name="tradeID" id="tradeID" value="resend"/>
+  <input type="submit" name="deposit_account" id="deposit_account" value="Deposit Price"/>
 </div>
 
 <div class="divider">
