--- a/spreedly-master/spreedly.html
+++ b/spreedly-master/spreedly.html
@@ -35,6 +35,7 @@
 				  callback: function(token) {
 				    // alert('I tokenized a payment! Woot! ' + token);
 				    console.log('I tokenized a payment! Woot! ' + token);
+				    document.getElementById('token_request').value = token;
 				  },
 				  error: function() {
 				    // alert('Something went horribly wrong.');
@@ -81,29 +82,21 @@ cvv: '123'
 </select>
 <select id="year" name="year">
 	<option value="">Year</option>
-	<option value="1999">1999</option>
-	<option value="2000">2000</option>
-	<option value="2001">2001</option>
-	<option value="2002">2002</option>
-	<option value="2003">2003</option>
-	<option value="2004">2004</option>
-	<option value="2005">2005</option>
-	<option value="2006">2006</option>
-	<option value="2007">2007</option>
-	<option value="2008">2008</option>
-	<option value="2009">2009</option>
-	<option value="2010">2010</option>
-	<option value="2011">2011</option>
-	<option value="2012">2012</option>
-	<option value="2013">2013</option>
 	<option value="2014">2014</option>
 	<option value="2015">2015</option>
 	<option value="2016">2016</option>
 	<option value="2017">2017</option>
+	<option value="2018">2018</option>
+	<option value="2021">2021</option>
+	<option value="2021">2021</option>
+	<option value="2021">2021</option>
 </select>
 <div>CVV: </div> <input type="text" id="cvv_payment" name="cvv_payment" placeholder="ccv"/> <br>
 <input type="submit" id="payment_method" name="payment_method" placeholder="Payment Method"/>
 <!-- End For Payment_method -->
+<hr/>
+<input type="text" id="token_request" name="token_request" placeholder="Token requested"/>
+<input type="submit" id="process_payment" name="process_payment" value="Process Payment"/>
 
 </body>
 </html>
