update spreedly and trade

--- a/TCC/trade.html
+++ b/TCC/trade.html
@@ -43,9 +43,30 @@ Result Below: <br>
 <div class="divider">
   <div>Buy Currency: </div>
   <select name="buy_currency" id="buy_currency">
-    <option value="EUR">EU euro</option>
     <option value="GBP">British pound</option>
+    <option value="EUR">EU euro</option>
     <option value="USD">US Dollar</option>
+    <option value="CAD">Canadian Dollar</option>
+    <option value="AUD">Australian Dollar</option>
+    <option value="CHF">Swiss Franc</option>
+    <option value="CZK">Czech Republic Koruna</option>
+    <option value="DKK">Danish Krone</option>
+    <option value="HKD">Hong Kong Dollar</option>
+    <option value="JPY">Japanese Yen</option>
+    <option value="MXN">Mexican Peso</option>
+    <option value="NOK">Norwegian Krone</option>
+    <option value="NZD">New Zealand Dollar</option>
+    <option value="PLN">Polish Zloty</option>
+    <option value="RUB">Russian Ruble</option>
+    <option value="SEK">Swedish Krona</option>
+    <option value="TRY">Turkish Lira</option>
+    <option value="ZAR">South Africa Rand</option>
+    <option value="AED">United Arab Emirates Dirham</option>
+    <option value="HUF">Hungarian Forint</option>
+    <option value="ILS">Israeli New Sheqel</option>
+    <option value="SGD">Singapore Dollar</option>
+    <option value="RON">Romania Leu</option>
+    <option value="THB">Thai Baht</option>
   </select>
   <br />
   <div>Sell Currency:</div>             
@@ -53,6 +74,27 @@ Result Below: <br>
       <option value="GBP">British pound</option>
       <option value="EUR">EU euro</option>
       <option value="USD">US Dollar</option>
+      <option value="CAD">Canadian Dollar</option>
+      <option value="AUD">Australian Dollar</option>
+      <option value="CHF">Swiss Franc</option>
+      <option value="CZK">Czech Republic Koruna</option>
+      <option value="DKK">Danish Krone</option>
+      <option value="HKD">Hong Kong Dollar</option>
+      <option value="JPY">Japanese Yen</option>
+      <option value="MXN">Mexican Peso</option>
+      <option value="NOK">Norwegian Krone</option>
+      <option value="NZD">New Zealand Dollar</option>
+      <option value="PLN">Polish Zloty</option>
+      <option value="RUB">Russian Ruble</option>
+      <option value="SEK">Swedish Krona</option>
+      <option value="TRY">Turkish Lira</option>
+      <option value="ZAR">South Africa Rand</option>
+      <option value="AED">United Arab Emirates Dirham</option>
+      <option value="HUF">Hungarian Forint</option>
+      <option value="ILS">Israeli New Sheqel</option>
+      <option value="SGD">Singapore Dollar</option>
+      <option value="RON">Romania Leu</option>
+      <option value="THB">Thai Baht</option>
   </select>
 
   <br />
