--- a/spreedly/spreedly.html
+++ b/spreedly/spreedly.html
@@ -32,7 +32,7 @@
 <body>
     <form accept-charset="UTF-8" action="https://core.spreedly.com/v1/payment_methods" method="POST">
       <fieldset>
-        <!-- <input name="redirect_url" type="hidden" value="http://example.com/transparent_redirect_complete" /> -->
+        <input name="redirect_url" type="hidden" value="http://1fx.philwebservicesdev.com/screen/" /> <!-- must workable link/url here -->
         <input name="environment_key" type="hidden" value="8swOjWN7iUOAozk0w0tj9gvMBY8" />
         <input name="utf8" type="hidden" value="✓" />
 
@@ -49,8 +49,32 @@
         <input autocomplete="off" id="credit_card_verification_value" name="credit_card[verification_value]" type="text" />
 
         <label for="credit_card_month">Expires on</label>
-        <input id="credit_card_month" name="credit_card[month]" type="text" />
-        <input id="credit_card_year" name="credit_card[year]" type="text" />
+        <select id="credit_card_month" name="credit_card[month]" >
+          <option value="">Month</option>
+          <option value="1">January</option>
+          <option value="2">February</option>
+          <option value="3">March</option>
+          <option value="4">April</option>
+          <option value="5">May</option>
+          <option value="6">June</option>
+          <option value="7">July</option>
+          <option value="8">August</option>
+          <option value="9">September</option>
+          <option value="10">October</option>
+          <option value="11">November</option>
+          <option value="12">December</option>
+        </select>
+        <select id="credit_card_year" name="credit_card[year]" >
+          <option value="">Year</option>
+          <option value="2014">2014</option>
+          <option value="2015">2015</option>
+          <option value="2016">2016</option>
+          <option value="2017">2017</option>
+          <option value="2018">2018</option>
+          <option value="2021">2021</option>
+          <option value="2021">2021</option>
+          <option value="2021">2021</option>
+        </select>
 
         <button type='submit'>Submit Payment</button>
       </fieldset>
