new trade update

--- a/TCC/trade.html
+++ b/TCC/trade.html
@@ -63,6 +63,7 @@ Result Below: <br>
     <option value="ZAR">South Africa Rand</option>
     <option value="AED">United Arab Emirates Dirham</option>
     <option value="HUF">Hungarian Forint</option>
+    <option value="LTL">Lithuanian Litas</option>
     <option value="ILS">Israeli New Sheqel</option>
     <option value="SGD">Singapore Dollar</option>
     <option value="RON">Romania Leu</option>
@@ -91,6 +92,7 @@ Result Below: <br>
       <option value="ZAR">South Africa Rand</option>
       <option value="AED">United Arab Emirates Dirham</option>
       <option value="HUF">Hungarian Forint</option>
+      <option value="LTL">Lithuanian Litas</option>
       <option value="ILS">Israeli New Sheqel</option>
       <option value="SGD">Singapore Dollar</option>
       <option value="RON">Romania Leu</option>
