--- a/TCC/trade.html
+++ b/TCC/trade.html
@@ -63,7 +63,7 @@ Result Below: <br>
     <option value="ZAR">South Africa Rand</option>
     <option value="AED">United Arab Emirates Dirham</option>
     <option value="HUF">Hungarian Forint</option>
-    <option value="LTL">Lithuanian Litas</option>
+    <option value="LTL">Lithuanian Litas</option>\
     <option value="ILS">Israeli New Sheqel</option>
     <option value="SGD">Singapore Dollar</option>
     <option value="RON">Romania Leu</option>
@@ -72,31 +72,30 @@ Result Below: <br>
   <br />
   <div>Sell Currency:</div>             
   <select  name="sell_currency" id="sell_currency">
-      <option value="GBP">British pound</option>
-      <option value="EUR">EU euro</option>
-      <option value="USD">US Dollar</option>
-      <option value="CAD">Canadian Dollar</option>
-      <option value="AUD">Australian Dollar</option>
-      <option value="CHF">Swiss Franc</option>
-      <option value="CZK">Czech Republic Koruna</option>
-      <option value="DKK">Danish Krone</option>
-      <option value="HKD">Hong Kong Dollar</option>
-      <option value="JPY">Japanese Yen</option>
-      <option value="MXN">Mexican Peso</option>
-      <option value="NOK">Norwegian Krone</option>
-      <option value="NZD">New Zealand Dollar</option>
-      <option value="PLN">Polish Zloty</option>
-      <option value="RUB">Russian Ruble</option>
-      <option value="SEK">Swedish Krona</option>
-      <option value="TRY">Turkish Lira</option>
-      <option value="ZAR">South Africa Rand</option>
-      <option value="AED">United Arab Emirates Dirham</option>
-      <option value="HUF">Hungarian Forint</option>
-      <option value="LTL">Lithuanian Litas</option>
-      <option value="ILS">Israeli New Sheqel</option>
-      <option value="SGD">Singapore Dollar</option>
-      <option value="RON">Romania Leu</option>
-      <option value="THB">Thai Baht</option>
+    <option value="GBP">British pound</option>
+    <option value="EUR">EU euro</option>
+    <option value="USD">US Dollar</option>
+    <option value="CAD">Canadian Dollar</option>
+    <option value="AUD">Australian Dollar</option>
+    <option value="CHF">Swiss Franc</option>
+    <option value="CZK">Czech Republic Koruna</option>
+    <option value="DKK">Danish Krone</option>
+    <option value="HKD">Hong Kong Dollar</option>
+    <option value="JPY">Japanese Yen</option>
+    <option value="MXN">Mexican Peso</option>
+    <option value="NOK">Norwegian Krone</option>
+    <option value="NZD">New Zealand Dollar</option>
+    <option value="PLN">Polish Zloty</option>
+    <option value="RUB">Russian Ruble</option>
+    <option value="SEK">Swedish Krona</option>
+    <option value="TRY">Turkish Lira</option>
+    <option value="ZAR">South Africa Rand</option>
+    <option value="AED">United Arab Emirates Dirham</option>
+    <option value="HUF">Hungarian Forint</option>
+    <option value="LTL">Lithuanian Litas</option>
+    <option value="ILS">Israeli New Sheqel</option>
+    <option value="SGD">Singapore Dollar</option>
+    <option value="RON">Romania Leu</option>
   </select>
 
   <br />
